add load file into dataframe